fix with overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -488,7 +488,7 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
     .container_modal {
       margin-bottom: 2rem;
       overflow: scroll !important;
-      height: 100%;
+      height: auto;
       width: 90%;
     }
   
